[package]
name = "usbTools"
version = "0.1.0"
edition = "2024"
description = "usb development tool Collection"

[dependencies]
nusb = {version = "0.1"}
anyhow  = {version = "1.0"}
uuid = {version = "1.11", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
